@@ -14,7 +14,7 @@
      col.grid="lightgray",
      lty.grid="dotted",
      rho1000=FALSE,
-     cex=par("cex"), col=par("col"), pch=par("pch"),
+     cex=par("cex"), col=par("col"), pch=par("pch"), bg,
      col.rho="darkgray",
      cex.rho=3/4*par("cex"),
      rotateRhoLabels=FALSE,
@@ -49,6 +49,8 @@
   \item{rho1000}{if TRUE, label isopycnals as e.g. 1024; if FALSE, label as e.g. 24}
   \item{cex}{character-expansion factor for symbols, as in \code{\link{par}("cex")}.}
   \item{pch}{symbol type, as in \code{\link{par}("pch")}.}
+  \item{bg}{optional colour to be painted under plotting area, before plotting.
+      (This is useful for cases in which \code{inset=TRUE}.)}
   \item{col}{colour for symbols.}
   \item{col.rho}{colour for isopycnal lines.}
   \item{cex.rho}{size of isopycnal labels.}
